--- a/src/main/webapp/jbatch-plugin/html/startJob.html
+++ b/src/main/webapp/jbatch-plugin/html/startJob.html
@@ -32,9 +32,11 @@
     <br>
     <br>
     <br>
-    <div class="row">                               
-        <input class="row" type="text" ng-model="run_job"/>                
-        <input class="row" type="text" ng-model="properties"/>        
+    <div class="row">        
+        <label class="row" for="runjob">Job Name: </label>
+        <input id="runjob" class="row" type="text" ng-model="run_job"/>                
+        <label class="row" for="params">Job Parameters: </label>
+        <input id="params" class="row" type="text" ng-model="properties"/>        
         <button ng-click="startJobCli(selected_depl, run_job,properties)">Run Job</button>        
         <p class="row"><b>Be careful</b> - the job name from deployments table does not have to match the xml name of the job which is needed to run it. Check your job xml names!</p>
     </div>
